# VideoRankingStudio

./: .dockerignore  .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  PROGRESS.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: package.json  tsconfig.json  vitest.config.ts
apps/api/src/: index.ts  server.ts
apps/api/src/config/: db.ts  email.ts  env.ts  redis.ts  security.ts  storage.ts  stripe.ts
apps/api/test/: setup.ts
apps/web/: .eslintrc.json  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/e2e/: auth.spec.ts  authed-projects.spec.ts  marketing.spec.ts
apps/web/src/: middleware.ts
apps/workers/: pyproject.toml
apps/workers/src/vrs_workers/: __init__.py  api_client.py  celery_app.py  compose.py  config.py  db.py  logging.py  main.py  progress.py  storage.py  text_render.py  tracing.py
apps/workers/src/vrs_workers/tasks/: __init__.py  _base.py  export_render.py  highlights.py  image_gen.py  import_url.py  publish.py  script_gen.py  thumbnails.py  transcription.py  tts.py  video_gen.py  voice_clone.py
apps/workers/tests/: conftest.py  test_compose.py  test_text_render.py
docs/: AI_PIPELINE.md  API.md  BILLING.md  DATA_MODEL.md  DEPLOYMENT.md  GAP-ANALYSIS.md  OBSERVABILITY.md  RUNBOOKS.md  SECURITY.md  TESTING.md
infrastructure/docker/: api.Dockerfile  web.Dockerfile  workers.Dockerfile
infrastructure/docker/postgres/: init-multi-db.sh
infrastructure/grafana/: README.md  api-health.json  billing-funnel.json  export-pipeline.json  infrastructure.json  worker-throughput.json
infrastructure/loadtests/: api.js
infrastructure/terraform/: README.md
(+183 files in other folders)
