[project]
name = "vrs-workers"
version = "0.1.0"
description = "AI worker pool for VideoRankingStudio: transcription, TTS, highlights, image/video gen, exports."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
  "celery[redis]>=5.4.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.18",
  "redis>=5.0.4",
  "boto3>=1.34.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "tenacity>=8.2.3",
  "python-multipart>=0.0.9",
  "yt-dlp>=2024.4.9",
  "ffmpeg-python>=0.2.0",
  "openai>=1.25.0",
  "anthropic>=0.25.0",
  "elevenlabs>=1.2.0",
  "numpy>=1.26.0",
  "librosa>=0.10.1",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-celery>=0.45b0",
  "sentry-sdk>=2.0.0",
]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.0.1"]
diffusion = ["diffusers>=0.27.0", "torch>=2.2.0", "transformers>=4.40.0", "accelerate>=0.30.0"]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.4",
  "mypy>=1.10.0",
  "testcontainers>=4.4.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "PL", "RUF", "S", "SIM", "C4"]
ignore = ["E501", "S101", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
